[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/MultiScenes.gd" type="Script" id=1]
[ext_resource path="res://font/Colored Crayons.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="create_hero" type="Button" parent="."]
margin_left = 718.999
margin_top = 341.0
margin_right = 843.999
margin_bottom = 395.0
text = "Create Hero"

[node name="Log In" type="Button" parent="."]
margin_left = 722.0
margin_top = 453.0
margin_right = 845.0
margin_bottom = 514.0
text = "Log In"

[node name="Map_fight_1" type="Button" parent="."]
margin_left = 176.0
margin_top = 260.0
margin_right = 355.0
margin_bottom = 333.0
text = "Map Fight 1"

[node name="Map_fight_2" type="Button" parent="."]
margin_left = 174.0
margin_top = 403.0
margin_right = 360.0
margin_bottom = 478.0
text = "Map Fight 2"

[node name="map_level" type="Button" parent="."]
margin_left = 180.0
margin_top = 112.0
margin_right = 346.0
margin_bottom = 198.0
text = "Map Level"

[node name="Sign In" type="Button" parent="."]
margin_left = 712.0
margin_top = 232.0
margin_right = 850.0
margin_bottom = 283.0
text = "Sign In"

[node name="Start" type="Button" parent="."]
margin_left = 712.0
margin_top = 101.0
margin_right = 844.0
margin_bottom = 165.0
text = "Start"

[node name="Shop" type="Button" parent="."]
margin_left = 180.0
margin_top = 526.0
margin_right = 357.0
margin_bottom = 580.0
text = "Shop"

[node name="Button2" type="Button" parent="."]
margin_left = 494.0
margin_top = 611.0
margin_right = 506.0
margin_bottom = 631.0

[node name="Button" type="Button" parent="."]
margin_left = 448.855
margin_top = 613.632
margin_right = 460.855
margin_bottom = 633.632

[node name="Map2" type="Label" parent="."]
margin_left = -2.09747
margin_top = -0.902496
margin_right = 542.903
margin_bottom = 47.0975
custom_fonts/font = SubResource( 1 )
text = "Map"
align = 1

[node name="Init2" type="Label" parent="."]
margin_left = 551.0
margin_top = 3.0
margin_right = 1027.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "Init"
align = 1
[connection signal="pressed" from="create_hero" to="." method="_on_create_hero_pressed"]
[connection signal="pressed" from="Log In" to="." method="_on_Log_In_pressed"]
[connection signal="pressed" from="Map_fight_1" to="." method="_on_Map_fight_1_pressed"]
[connection signal="pressed" from="Map_fight_2" to="." method="_on_Map_fight_2_pressed"]
[connection signal="pressed" from="map_level" to="." method="_on_map_level_pressed"]
[connection signal="pressed" from="Sign In" to="." method="_on_Sign_In_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_Shop_pressed"]
